// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BrandIcon Rendering Normal 1`] = `
<Icon
  color="#0066b1"
  name="wikipedia-w"
  size={16}
  type="brand"
/>
`;

exports[`BrandIcon Rendering With color 1`] = `
<Icon
  color="red"
  name="wikipedia-w"
  size={16}
  type="brand"
/>
`;

exports[`BrandIcon Rendering With size 1`] = `
<Icon
  color="#0066b1"
  name="wikipedia-w"
  size={20}
  type="brand"
/>
`;
